--- a/scss/main.css
+++ b/scss/main.css
@@ -22,10 +22,9 @@
   font-size: 5rem;
   padding-bottom: 1rem;
   margin-bottom: 1rem;
-  border-bottom: 2px solid #fff;
 }
 .home__name--last {
-  color: #ff652f;
+  color: rgb(166, 255, 0);
   font-weight: 700;
 }
 
@@ -125,7 +124,7 @@
   transform: translateX(0);
 }
 .menu-nav__item.active > a {
-  color: #ff652f;
+  color: rgb(166, 255, 0);
 }
 .menu-nav__link {
   display: inline-block;
@@ -136,7 +135,7 @@
   transition: all 0.2s ease-in-out;
 }
 .menu-nav__link:hover {
-  color: #ff652f;
+  color: rgb(166, 255, 0);
 }
 
 .menu-nav__item:nth-child(1) {
@@ -188,7 +187,7 @@
 .about .jobs__job {
   background: #414141;
   padding: 0.5rem;
-  border-bottom: 5px solid #ff652f;
+  border-bottom: 5px solid rgb(166, 255, 0);
 }
 .about .jobs__job h2, .about .jobs__job h3 {
   margin: 0.5rem 0;
@@ -230,7 +229,7 @@
 }
 .projects__item {
   position: relative;
-  border-bottom: 5px solid #ff652f;
+  border-bottom: 5px solid rgb(166, 255, 0);
   overflow: hidden;
   cursor: pointer;
 }
@@ -244,7 +243,7 @@
   left: 0;
   height: 100%;
   width: 100%;
-  background: #ff652f;
+  background: rgb(166, 255, 0);
   opacity: 0;
   transition: all 0.2s ease-in-out;
 }
@@ -362,7 +361,7 @@ a {
 }
 
 .text-secondary {
-  color: #ff652f;
+  color: rgb(166, 255, 0);
 }
 
 body {
@@ -387,7 +386,7 @@ main .social-icons a {
   transition: all 0.2s ease-in-out;
 }
 main .social-icons a:hover {
-  color: #ff652f;
+  color: rgb(166, 255, 0);
 }
 
 .header {
